# ANF-

./: .gitignore  .gitmodules  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml
app/: CLInfo.hs  CLVectorSample.hs  Interactive.hs  Main.hs  SatCL.hs  SatCLinc.hs
benchmarks/uf20-91/: uf20-01000.cnf  uf20-08.cnf
docs/: README.org
docs/opencl/: CMakeLists.txt  README.org  info.c  info.cpp  vector_add.cpp
docs/opencl/matrix/: README.org
docs/sat/: README.org
docs/tools/: README.org
src/: CLSat.hs
src/Data/: SAT.hs
src/Data/Formula/: ANF.hs  Prop.hs
src/Data/Formula/ANF/: Base.hs  CanonicalBase.hs  IntRepr.hs  IntegerRepr.hs  MatrixRepr.hs  VectorRepr.hs
src/Data/SAT/: DIMACS.hs  Smt.hs
src/Data/SAT/DIMACS/: ANF.hs  CNF.hs  Lexer.hs  example.anf
src/Utils/: Binary.hs  Export.hs  Histogram.hs  Log.hs  OpenCL.hs  Options.hs  VarsTable.hs
src/Utils/Export/: Spreadsheet.hs
src/Utils/OpenCL/: Bitonic.hs
test/Data/Formula/ANF/: BaseSpec.hs
test/Data/SAT/: DIMACSSpec.hs
test/files/: test0.anf  test0.cnf  test0.smt  test1-unsat.smt  test1.smt  test2.smt
